library intermediate